--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@ body{
   color:white;
   font-family:'Montserrat';
 }
+
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 900
+
+.raleway-<uniquifier> {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
