--- a/style.css
+++ b/style.css
@@ -1,15 +1,5 @@
 body{
   background-color:#1a130f;
   color:white;
-  font-family:'Montserrat';
-}
-
-// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 900
-
-.raleway-<uniquifier> {
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
+  font-family:'Raleway';
 }
